# tCalibration

./: .gitignore  .gitmodules  CMakeLists.txt  DEPS.md  README.md  dependencies.md
applications/CalibrationTool/: CMakeLists.txt  CalibTaskPlayer.cpp  CalibTaskPlayer.h  DataConsumer.cpp  DataConsumer.h  DeviceClient.cpp  DeviceClient.h  DeviceClient_p.h  DeviceInfo.cpp  DeviceInfo.h  DeviceListItem.cpp  DeviceListItem.h  DeviceWatchdog.cpp  DeviceWatchdog.h  EthernetAdaptorHelper.cpp  EthernetAdaptorHelper.h  GlobalConfigs.cpp  GlobalConfigs.h  MainWindow.cpp  MainWindow.h  MonoCameraCalibrationTask.cpp  MonoCameraCalibrationTask.h  MonoCameraCalibrationView.cpp  MonoCameraCalibrationView.h  MonoCameraCalibrationView.ui  MonoCameraClient.cpp  MonoCameraClient.h  MonoCameraVerificationView.cpp  MonoCameraVerificationView.h  MonoCameraVerificationView.ui  ProductInfo.cpp  ProductInfo.h  ReportSummary.cpp  ReportSummary.h  ReportView.cpp  ReportView.h  SharedUdpSocket.cpp  SharedUdpSocket.h  StereoCameraCalibrationTask.cpp  StereoCameraCalibrationTask.h  (+18 more)
applications/CalibrationTool/gui/: qfileutils.cpp  qfileutils.h  qimageutils.cpp  qimageutils.h  qnetworkutils.cpp  qnetworkutils.h  qstringutils.cpp  qstringutils.h  qtanimation.cpp  qtanimation.h  qtcoreutils.cpp  qtcoreutils.h  qtcvutils.cpp  qtcvutils.h  qtgridwidget.cpp  qtgridwidget.h  qtimageview.cpp  qtimageview.h  qtipv4lineedit.cpp  qtipv4lineedit.h  qtjsontreemodel.cpp  qtjsontreemodel.h  qtledindicator.cpp  qtledindicator.h  qtlistwidget.cpp  qtlistwidget.h  qtlogview.cpp  qtlogview.h  qtswitchbutton.cpp  qtswitchbutton.h  qttabwidget.cpp  qttabwidget.h  qtthread.cpp  qtthread.h  qtwaitingspinner.cpp  qtwaitingspinner.h  qwidgetutils.cpp  qwidgetutils.h
applications/CalibrationTool/msgbus/: types.cpp  types.h
applications/CalibrationTool/resources/: app.qrc  app_win.rc  configs.tt
applications/CalibrationTool/soc/: types.h  utils.cpp  utils.h
applications/CalibrationTool/zeromq/: types.h  utils.cpp  utils.h
modules/: CMakeLists.txt
modules/application/: AppConfigs.cpp  AppConfigs.h  CMakeLists.txt  CalibBoardConfigsWidget.cpp  CalibBoardConfigsWidget.h  CalibBoardConfigsWidget.ui  EthernetAdaptorHelper.cpp  EthernetAdaptorHelper.h  LedIndicatorGrid.cpp  LedIndicatorGrid.h  Scene3DViewer.cpp  Scene3DViewer.h  StereoModuleCalibResultView.cpp  StereoModuleCalibResultView.h  StereoModuleCalibrationConfigWidget.cpp  StereoModuleCalibrationConfigWidget.h  StereoModuleCalibrationConfigWidget.ui  StereoModuleCalibrationView.cpp  StereoModuleCalibrationView.h  StereoModuleCalibrationView.ui  StereoModuleData.cpp  StereoModuleData.h  StereoModuleHubClient.cpp  StereoModuleHubClient.h  StereoModuleImageQualityView.cpp  StereoModuleImageQualityView.h  StereoModuleTask.cpp  StereoModuleTask.h  StereoModuleToolView.cpp  StereoModuleToolView.h  StereoModuleVerificationConfigWidget.cpp  StereoModuleVerificationConfigWidget.h  StereoModuleVerificationConfigWidget.ui  StereoModuleVerificationView.cpp  StereoModuleVerificationView.h  StereoModuleVerificationView.ui  StereoModuleVerifyResultView.cpp  StereoModuleVerifyResultView.h  TestStereoModuleWidget.cpp  TestStereoModuleWidget.h  (+4 more)
modules/application/cmake/: FindgRPC.cmake
modules/application/gui/: AbstractItemListWidget.cpp  AbstractItemListWidget.h  Animation.cpp  Animation.h  AutoDeleteThread.cpp  AutoDeleteThread.h  ColorButton.cpp  ColorButton.h  ComboBoxDelegate.cpp  ComboBoxDelegate.h  CornerRadius.cpp  CornerRadius.h  EventFilters.cpp  EventFilters.h  IPv4LineEdit.cpp  IPv4LineEdit.h  ImageView.cpp  ImageView.h  LedIndicator.cpp  LedIndicator.h  LineEdit.cpp  LineEdit.h  LogWidget.cpp  LogWidget.h  NavigationBar.cpp  NavigationBar.h  QtOpenCV.cpp  QtOpenCV.h  RoundedFocusFrame.cpp  RoundedFocusFrame.h  StatusBadge.cpp  StatusBadge.h  StdOStreamRedirector.h  SuspendableWorker.cpp  SuspendableWorker.h  Switch.cpp  Switch.h  TextLabel.cpp  TextLabel.h  TheStyle.cpp  (+38 more)
modules/application/locale/: CalibrationTool_zh_CN.ts  CalibrationToolbox_zh_CN.ts
modules/application/protos/: CMakeLists.txt  common.cmake  luba_vision_router.proto
modules/application/resources/: app.qrc  app_win.rc
modules/calibration/: CMakeLists.txt
modules/calibration/src/: calib_observation.cpp  calib_observation.h  calibobservation.cpp  camera_imu_calibration.cpp  camera_imu_calibration.h  camera_imu_rotation_calibration.cpp  camera_imu_rotation_calibration.h  camera_intrinsics_calibration.cpp  camera_intrinsics_calibration.h  camera_pose_calibration.cpp  camera_pose_calibration.h  cameraimucalibration.cpp  cameraimucalibration.h  cameraimurotationcalibration.cpp  cameraimurotationcalibration.h  cameraintrinsicscalibration.cpp  cameraintrinsicscalibration.h  cameraposecalibration.cpp  cameraposecalibration.h  ceres_spline_helper.h  ceres_spline_residuals.h  ceressplineresiduals.h  ceressplineresiduals.hpp  imu_calibration_task.cpp  imu_calibration_task.h  imu_intrinsics_calibration.cpp  imu_intrinsics_calibration.h  imucalibrationtask.cpp  imucalibrationtask.h  imuintrinsicscalibration.cpp  imunoisecalibration.cpp  imunoisecalibration.h  inertialbasedscaleestimation.cpp  inertialbasedscaleestimation.h  initialize_intrinsics.cpp  initialize_intrinsics.h  initializeintrinsics.cpp  spline_trajectory_estimator.h  spline_trajectory_estimator.impl.hpp  splinefactors.h  (+14 more)
modules/calibration/tests/: CMakeLists.txt  tst_cam_intrinsics.cpp  tst_ibse.cpp  tst_imu_intrinsics.cpp  tst_imuintrinsics.cpp  tst_io.cpp  tst_spline.cpp  tst_stereo.cpp
modules/camera/: CMakeLists.txt
modules/camera/perf/: CMakeLists.txt  (+1 more)
modules/cmake/: CalibKitConfig.cmake.in
modules/core/: CMakeLists.txt
modules/device/: CMakeLists.txt
modules/externs/: CMakeLists.txt  NOTE.md
modules/imgproc/: CMakeLists.txt
modules/imu/: CMakeLists.txt
modules/math/: CMakeLists.txt
modules/motion/: CMakeLists.txt
modules/mvs/: CMakeLists.txt
modules/scene3d/: CMakeLists.txt  README.md
modules/solver/: CMakeLists.txt
modules/space/: CMakeLists.txt
modules/vio/: CMakeLists.txt
modules/vision/: CMakeLists.txt
(+1566 files in other folders)
